--- a/Project1/style.css
+++ b/Project1/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Yeseva+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Flow+Circular&family=Yeseva+One&display=swap');
 
 #navbar{
 
@@ -78,6 +80,36 @@ li.dropdown {
 .dropdown {
       position: relative;
   }
+
+.recommended {
+      margin: 4rem;
+  }
+
+.card-text {
+      font-family: Cardo, serif;
+      font-weight: 500;
+      margin-bottom: 0;
+}
+
+.card-price {
+      font-weight: 600;
+      margin-top: 0;
+}
+
+.card {
+      border: none;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+      margin: 4rem;
+    }
+
+.card-link {
+      text-decoration: none;
+      color: black;
+}
+
+.card-link:hover {
+
+}
 
 
 
