--- a/Project1/style.css
+++ b/Project1/style.css
@@ -7,14 +7,8 @@
     background-color: white; 
     }
 
-#hero-video{
-
-      opacity: 1;
-
-}
-
 body {
-      font-family: "Josefin Sans", sans-serif;
+      font-family: $font-family
       margin: 0;
 }
 
@@ -33,7 +27,7 @@ li {
     
 li a, .dropbtn {
       display: inline-block;
-      color:#bf7b67;
+      color: $primary-color;
       text-align: center;
       padding: 16px 16px;
       text-decoration: none;
@@ -65,7 +59,7 @@ li.logo img {
 
 .card {
       border: none;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 0px 10px $shadow-color;
       margin: 4rem;
     }
 
@@ -74,6 +68,105 @@ li.logo img {
       color: black;
 }
 
+#categorytitle {
+
+      font-size: 130%;
+      padding-top: 50px;
+      padding-left: 50px;
+      letter-spacing: 1px;
+      font-weight: 500;
+}
+
+#categorytitle a{
+      position: relative; 
+      
+}
+
+#categorytitle a::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      border-radius: 4px;
+      background-color: $primary-color;
+      bottom: 0;
+      left: 0;
+      transform-origin: right;
+      transform: scaleX(0);
+      transition: transform .3s ease-in-out;
+    }
+  
+#categorytitle a:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+}
+
+.card a{
+      text-decoration: none;
+      color: black;
+}
+
+.card-body{
+      height: 130px;
+}
+
+.category-container img{
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+}
+
+.category-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      margin-top: 20px;
+  }
+
+
+  .circle-image {
+      border-radius: 50%;
+      overflow: hidden;
+      width: 200px;
+      height: 200px; 
+      margin: 15px; 
+      position: relative;
+  }
+
+  .circle-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; 
+      transition: .5s ease;
+  }
+
+  .caption {
+      text-align: center;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.39);
+      color: white;
+      padding: 5px;
+      font-size: 14px;
+      letter-spacing: 1px;
+  }
+
+.circle-image img:hover{
+      opacity: 0.7;
+}
+
+#tbdmember{
+      display: block;
+      text-align: center;
+}
+
+#tbdmember img{
+      box-shadow: $shadow-color;
+
+}
 
 
 
