--- a/Project1/style.css
+++ b/Project1/style.css
@@ -2,46 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Yeseva+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Flow+Circular&family=Yeseva+One&display=swap');
 
-#navbar{
-
-    background-color: white; 
-    }
-
-body {
-      font-family: $font-family
-      margin: 0;
-}
-
-ul {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      display: flex; 
-      align-items: center; 
-}
-    
-li {
-      list-style: none;
-      float: none;
-}
-    
-li a, .dropbtn {
-      display: inline-block;
-      color: $primary-color;
-      text-align: center;
-      padding: 16px 16px;
-      text-decoration: none;
-}
-    
-li.logo {
-      display: block;
-      text-align: center;
-}
-    
-li.logo img {
-      max-height: 140px; 
-}
-
 .recommended {
       margin: 4rem;
   }
@@ -59,7 +19,7 @@ li.logo img {
 
 .card {
       border: none;
-      box-shadow: 0px 0px 10px $shadow-color;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
       margin: 4rem;
     }
 
@@ -88,7 +48,7 @@ li.logo img {
       width: 100%;
       height: 2px;
       border-radius: 4px;
-      background-color: $primary-color;
+      background-color: #bf7b67;
       bottom: 0;
       left: 0;
       transform-origin: right;
@@ -164,7 +124,7 @@ li.logo img {
 }
 
 #tbdmember img{
-      box-shadow: $shadow-color;
+      box-shadow: rgba(0, 0, 0, 0.1);
 
 }
 
