--- a/Project1/memb.css
+++ b/Project1/memb.css
@@ -8,7 +8,7 @@
     }
 
 body {
-      font-family: $font-family;
+      font-family: "Josefin Sans", sans-serif;;
       margin: 0;
 }
 
@@ -27,7 +27,7 @@ li {
     
 li a, .dropbtn {
       display: inline-block;
-      color:$primary-color;
+      color: #bf7b67;
       text-align: center;
       padding: 16px 16px;
       text-decoration: none;
